# batch_classifier

./: .gitignore  README.md  classifier.py  output.csv  process_batch.py  pyproject.toml  submit_batch.py
tests/: test_classifier.py
